YAS-CA/objects/Code_Analysis__c.object
<CustomObject>
    <fields>
        <fullName>Command__c</fullName>
        <label>Command</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PMD_Class_Path__c</fullName>
        <defaultValue>&apos;C:\\&apos;</defaultValue>
        <label>PMD Class Path</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Location__c</fullName>
        <defaultValue>&apos;C:\\&apos;</defaultValue>
        <label>Report Location</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Format Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>codeclimate</fullName>
                    <default>true</default>
                    <label>codeclimate</label>
                </value>
                <value>
                    <fullName>csv</fullName>
                </value>
                <value>
                    <fullName>html</fullName>
                </value>
                <value>
                    <fullName>summaryhtml</fullName>
                </value>
                <value>
                    <fullName>text</fullName>
                </value>
                <value>
                    <fullName>vbhtml</fullName>
                </value>
                <value>
                    <fullName>xml</fullName>
                </value>
                <value>
                    <fullName>yahtml</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rules_Path__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>Rules Path</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_Files_Path__c</fullName>
        <defaultValue>&apos;C:\\&apos;</defaultValue>
        <label>Source Files Path</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Active_Rules__c</fullName>
        <label>Total Active Rules</label>
        <summarizedField>Rule_Set__c.Active_Rules__c</summarizedField>
        <summaryFilterItems>
            <field>Rule_Set__c.Active_Rules__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Rule_Set__c.Code_Analysis__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Code Analysis</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Code Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>